# kali_mc

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  _version.py  conf.py  dicom_utils.py  kali_mc.spec  kali_mc_macos.spec  kali_mc_win.spec  main.py  main_rc.py  main_window.py  make.bat  pyproject.toml  report_utils.py  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  requirements_dev.txt  reset_version.py  updateVersion.py
.github/workflows/: new_release.yml  python-app-310-win.yml  python-app-310.yml  python-app-311-win.yml  python-app-311.yml  python-app-312-win.yml  python-app-312.yml  python-app-39-win.yml  python-app-39.yml  python-app.yml
data/: OF_C12.npz  OF_C4.npz  OF_C7.npz  R90_C10.npz  R90_C12.npz  R90_C3.npz  R90_C7.npz
data/sim/: OFs_penEasy.npz  R90s_penEasy.npz
dcm/: test.dcm
docs/source/: conf.py  custom_data_sources.rst  data_sources.rst  index.rst  license.rst  local_conf.rst  references.bib  starting.rst  usage.rst
kali_mc/: _version.py  conf.py  dicom_utils.py  kali_mc.spec  main.pro  main.py  main_rc.py  main_utils.py  main_window.py  make.bat  report_utils.py  reset_version.py
kali_mc/data/: OF_C10.npz  OF_C12.npz  OF_C3.npz  OF_C4.npz  OF_C5.npz  OF_C6.npz  OF_C7.npz  OF_C8.npz  OF_C9.npz  R90_C4.npz  R90_C5.npz  R90_C6.npz  R90_C8.npz  R90_C9.npz  rescaling_factors.npy
kali_mc/test/: UM_calc_test.py  dicom_test.py  plot_test.py  refresh_test.py  report_test.py  window_test.py
kali_mc/translations/: en.qm  en.ts  es_ES.ts
kali_mc/ui/: main_window.ui
kali_mc/ui/res/: splash-kali-social.psd
test/: report_test.py
translations/: en.qm  en.ts  es_ES.ts
ui/: main.qrc  main_window.ui
ui/res/: splash-kali.psd
(+156 files in other folders)
