[project]
name = "Kali_MC"
requires-python = ">=3.9"
description = "Software for calculating IORT treatments with a LIAC HWL linac"
authors = [
    {name = "Kali MC Contributors"}
]
maintainers = [
  {name = "Rafael Ayala"}
    ]
dynamic = [
   "version"  # this will be set by hatch
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["IORT","IOERT","medical", "physics", "radiotherapy", "radiation oncology"]
classifiers=[
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "altgraph==0.17.4",
    "chardet==5.2.0",
    "numpy==1.26.4",
    "pillow==10.3.0",
    "PyOpenGL==3.1.7",
    "pyqtgraph==0.13.7",
    "PySide6==6.7.3",
    "reportlab==4.2.0",
    "scipy==1.13.1",
    "shiboken2==5.15.2.1",
    "pydicom==2.4.4",
    "pynetdicom>=2.0.2",
 ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
# https://hatch.pypa.io/latest/version/
path = "kali_mc/conf.py"  # hatch will automatically set the version to the value in this file.

[project.urls]
Documentation = "https://kali-mc.readthedocs.io/"
Repository = "https://github.com/radiofisica-hgugm/kali_mc"
"Issue Tracker" = "https://github.com/radiofisica-hgugm/kali_mc/issues"
